@@ -93,6 +93,7 @@ PostGIS 3.0.0
            (Darafei Praliaskouski)
   - #4378, Allow passing TINs as input to GEOS-backed functions (Darafei
            Praliaskouski)
+  - #4368, Reorder LWGEOM struct members to minimize extra padding (Raúl Marín)
 
 PostGIS 2.5.0
 2018/09/23
